--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "income-outgoings-app",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,6 +12,8 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "mysql2": "^3.12.0"
   }
 }
