--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^6.0.5"
   },
   "dependencies": {
+    "chart.js": "^4.4.8",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "mysql2": "^3.12.0"
